--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,12 +1,17 @@
 .offers {
-  padding-top: 30px;
+  padding-top: 20px;
   text-align: center;
-  background-color: black;
+  background-color: #1d1d1f;
   color: white;
-  margin-top: 20px;
   padding-bottom: 10px;
 }
 
 .offers a {
-  color: blue;
+  color: rgb(26, 141, 242);
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.offers a:hover {
+  border-bottom: 1px solid rgb(26, 141, 242);
 }
