--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;800;900&family=Outfit:wght@100;200;500;600;900&family=Poppins:wght@300;400;500&family=Raleway:wght@600;900&display=swap");
+@font-face {
+  font-family: FontRegular;
+  src: url(../../../public/fonts/sf-pro-text_regular.ttf);
+}
 
 * {
   margin: 0;
@@ -7,19 +10,21 @@
   font-family: "Poppins", sans-serif;
 }
 
-.navbar .logo img {
-  height: 20px;
-}
-
-.navbar .nav-icons img {
-  height: 20px;
+.navbar .nav-icons {
   margin-left: 20px;
 }
 
 .navbar {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: center;
-  padding-top: 15px;
+  align-items: center;
+  padding: 10px 0;
+  background-color: rgb(0, 0, 0);
+  transition: background-color 0.3s ease;
+  color: #cccccc;
+  z-index: 100;
 }
 
 .navbar ul {
