changes images in the slider and main section and fixed font sizes

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -9,7 +9,8 @@
 .offers a {
   color: rgb(26, 141, 242);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 14px;
+  padding-top: 7px;
 }
 
 .offers a:hover {
