--- a/src/components/common/card.css
+++ b/src/components/common/card.css
@@ -1,5 +1,4 @@
 .body {
-  height: 80vh;
   overflow: hidden;
   position: relative;
   text-align: center !important;
@@ -19,16 +18,21 @@
 }
 
 .main-title h1 {
-  font-size: 50px;
+  font-size: 45px;
+  padding-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-title .subtitle {
-  font-size: 25px;
+  font-size: 20px;
+  padding-bottom: 5px;
 }
 
 .main-title .additional-info {
-  font-size: 20px;
-  padding-top: 10px;
+  font-size: 17px;
+  padding-bottom: 5px;
   color: #77777b;
 }
 
@@ -38,7 +42,7 @@
 
 .link {
   padding-top: 10px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
 }
 
