--- a/src/components/common/card.css
+++ b/src/components/common/card.css
@@ -56,3 +56,23 @@
 .link a:hover {
   border-bottom: 1px solid rgb(26, 141, 242);
 }
+
+@media (max-width: 1050px) {
+  .main-title h1 {
+    font-size: 38px;
+  }
+
+  .main-title .subtitle {
+    font-size: 15px;
+  }
+
+  .main-title .additional-info {
+    font-size: 14px;
+  }
+  .link {
+    font-size: 16px;
+  }
+  .link a {
+    margin-right: 7px;
+  }
+}
