--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,21 +10,23 @@
   font-family: "Poppins", sans-serif;
 }
 
-.navbar .nav-icons {
-  margin-left: 20px;
-}
-
 .navbar {
-  position: sticky;
-  top: 0;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px 0;
-  background-color: rgb(0, 0, 0);
-  transition: background-color 0.3s ease;
+  background-color: black;
   color: #cccccc;
   z-index: 100;
+  transition: ease background-color 0.01s;
+}
+
+.navbar.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.617);
 }
 
 .navbar ul {
@@ -35,4 +37,57 @@
 .navbar ul li {
   margin-left: 40px;
   font-size: 15px;
+}
+
+.navbar .nav-icons {
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.navbar .nav-icons-responsive {
+  display: none;
+}
+
+/* tablet responsive */
+@media (max-width: 1200px) {
+  .navbar {
+    padding: 10px 30px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .navbar .nav-icons-responsive {
+    display: flex;
+  }
+  .responsive-navbar {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    color: #cccccc;
+    font-size: 35px;
+    position: fixed;
+    top: -120%;
+    left: 0;
+    width: 100%;
+    transition: top 3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .responsive-navbar.show {
+    top: 0;
+  }
+
+  .responsive-navbar ul {
+    list-style: none;
+    align-items: start;
+    padding-left: 30px;
+  }
+
+  .responsive-navbar ul li {
+    padding-bottom: 10px;
+  }
 }
