--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,9 +1,8 @@
 .offers {
-  padding-top: 20px;
+  padding: 20px 10px 5px;
   text-align: center;
   background-color: #1d1d1f;
   color: white;
-  padding-bottom: 10px;
 }
 
 .offers a {
@@ -15,4 +14,40 @@
 
 .offers a:hover {
   border-bottom: 1px solid rgb(26, 141, 242);
+}
+
+@media (max-width: 900px) {
+  .offers p {
+    font-size: 15px;
+  }
+  .offers a {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 590px) {
+  .offers p {
+    font-size: 13px;
+  }
+  .offers a {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 400px) {
+  .offers p {
+    font-size: 12px;
+  }
+  .offers a {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 300px) {
+  .offers p {
+    font-size: 11px;
+  }
+  .offers a {
+    font-size: 10px;
+  }
 }
