--- a/src/components/common/card.css
+++ b/src/components/common/card.css
@@ -19,6 +19,7 @@
 
 .main-title h1 {
   font-size: 45px;
+  font-weight: 550;
   padding-bottom: 5px;
   display: flex;
   justify-content: center;
@@ -26,12 +27,12 @@
 }
 
 .main-title .subtitle {
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 5px;
 }
 
 .main-title .additional-info {
-  font-size: 17px;
+  font-size: 20px;
   padding-bottom: 5px;
   color: #77777b;
 }
