--- a/src/components/main-section/main-section.css
+++ b/src/components/main-section/main-section.css
@@ -122,6 +122,30 @@
     max-height: 550px;
     background-size: 100%;
   }
+
+  .imac-light-card {
+    height: 700px;
+  }
+
+  .apple-watch-dark-card {
+    height: 700px;
+  }
+
+  .airpods-dark-card {
+    height: 700px;
+  }
+
+  .ipad-light-card {
+    height: 700px;
+  }
+
+  .apple-card-light-card {
+    height: 700px;
+  }
+
+  .tradein-light-card {
+    height: 700px;
+  }
 }
 
 @media (max-width: 960px) {
@@ -161,7 +185,7 @@
 
   .macpro-light-card {
     max-height: 470px;
-    background-size: 190%;
+    background-size: 180%;
   }
 }
 
