--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,16 +1,28 @@
+.menu-info {
+  display: flex;
+  justify-content: space-evenly;
+  color: #77777b;
+  padding: 1rem 0;
+  font-size: 11px;
+  margin: 0 2rem;
+}
 .store {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 5rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 2rem 0;
   color: #77777b;
 }
-
 .store img {
   height: 16px;
   padding-right: 5px;
+}
+.footer-copyright {
+  display: flex;
+  justify-content: space-evenly;
+  color: #77777b;
+  padding-bottom: 0.5rem;
+  margin: 0 2rem;
 }
 .menu-list {
   display: flex;
@@ -26,7 +38,6 @@
   margin-top: 30px;
   background-color: rgba(0, 0, 0, 0.099);
 }
-
 .cross {
   display: none;
 }
