--- a/src/components/navbar/navbar-responsive.css
+++ b/src/components/navbar/navbar-responsive.css
@@ -47,6 +47,9 @@
     justify-content: space-between;
     align-items: center;
   }
+  .navbar ul {
+    display: none;
+  }
   .burguer {
     display: block;
   }
